tests/paczka1/small_fuzzy/21424126.err
Error in line 3: lyID692PNJY 56 14,8
Error in line 8: lyID692PNJY S56 29,7
Error in line 9: lyID692PNJY A100 19,8
